fix: edit class names

--- a/style.css
+++ b/style.css
@@ -70,15 +70,15 @@
     width: 110px;
 }
 
-.capsLock {
+.caps-lock {
     width: 90px;
 }
 
-.shiftLeft {
+.shift-left {
     width: 116px;
 }
 
-.shiftRight {
+.shift-right {
     width: 84px;
 }
 
